@startuml

class Competence {
    int : id
    string : nom
}

class Categorie {
    int : id
    string : nom
}

class Creneau {
    id : id
    string : activite
    date : date
}

class Utilisateur {
    int : id
    string : username
    string : motdepasse
    string : prenom
    string : nom
    string : email
}

' Une catégorie peut avoir plusieurs compétences et une compétence à une categorie
Categorie "1" -- "0..*" Competence : contient

' Un utilisateur peut avoir plusieurs compétences et une compétence peut avoir plusieurs utilisateurs
Utilisateur "0..*" -- "0..*" Competence : possede

' Un créneau correspond à une compétence demandée
Creneau "0..*" -- "1" Competence : est composé

' Un utilisateur peut créer plusieurs créneaux et un créneau est créé par un seul utilisateur
Utilisateur "1" -- "0..*" Creneau : crée

' Un utilisateur peut proposer son aide pour plusieurs créneaux et un créneau peut être aidé par plusieurs utilisateurs
Utilisateur "0..1" -- "0..*" Creneau : aidé

@enduml